<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/tvRoutineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Routine Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintEnd_toStartOf="@+id/btnDuplicate" />

    <Button
        android:id="@+id/btnDuplicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duplicate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnExercise"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>